# __portaudio-sveinse

./: CMakeLists.txt  Makefile.in  README.txt  configure  configure.in
cmake_support/: PaPlatformConfig.cmake  options_cmake.h.in
examples/: CMakeLists.txt
include/: pa_asio.h  portaudio.h
src/: SConscript
src/common/: pa_hostapi.h
src/hostapi/alsa/: pa_linux_alsa.c
src/hostapi/asio/: pa_asio.cpp
src/hostapi/coreaudio/: pa_mac_core.c  pa_mac_core_blocking.c  pa_mac_core_blocking.h  pa_mac_core_hotplug.c  pa_mac_core_internal.h  pa_mac_hotplug.c
src/hostapi/pulseaudio/: pa_hostapi_pulseaudio.c  pa_hostapi_pulseaudio_cb.c  pa_linux_pulseaudio.c  pa_linux_pulseaudio.h  pa_linux_pulseaudio_block.c  pa_linux_pulseaudio_block.h  pa_linux_pulseaudio_cb.c  pa_linux_pulseaudio_cb.h
src/os/unix/: pa_linux_hotplug.c  pa_unix_hostapis.c
test/: CMakeLists.txt  patest_refresh_device_list.c
